# optic

./: .all-contributorsrc  .editorconfig  .env.alpha  .env.beta  .env.latest  .env.local  .env.sidechannel  .env.test  .gitignore  .npmrc  .prettierignore  .prettierrc  .tool-versions  .yarnrc  .yarnrc.yml  CODE_OF_CONDUCT.md  Cargo.toml  Contributing.md  Contributors.md  Developer-setup.md  Dockerfile  LICENSE  README.md  Readme.md  Taskfile.yml  Usability-tests.md  build.sbt  build.sh  compass.yml  config.yaml  config.yml  debugsourceme.sh  docker-compose.yml  export_development_aliases.sh  install-local.sh  install.sh  makefile  openapi file with space.yml  package.json  peek.yml  (+6 more)
diff/: Cargo.toml
diff/src/: lib.rs  main.rs
diff/src/events/: endpoint.rs  http_interaction.rs  mod.rs  rfc.rs  shape.rs
diff/src/interactions/: diff.rs  http_interaction.rs  mod.rs  result.rs  traverser.rs
diff/src/interactions/visitors/: diff.rs  mod.rs
diff/src/projections/: endpoint.rs  mod.rs  shape.rs
diff/src/queries/: endpoint.rs  endpoints.rs  mod.rs  shape.rs
diff/src/shapes/: diff.rs  mod.rs  traverser.rs
diff/src/shapes/visitors/: diff.rs  mod.rs
diff/src/state/: endpoint.rs  shape.rs
diff/src/streams/: diff.rs  http_interaction.rs  mod.rs
diff/tests/: http_interactions.rs  interaction_diff.rs  shape_diff.rs  spec_events_steam.rs
diff/tests/fixtures/: todos-interaction.json_stream
diff/tests/snapshots/: events__spec_should_deserialize.snap  interaction_diff__can_yield_umatched_request_url-2.snap  interaction_diff__can_yield_umatched_request_url.snap  shape_diff__can_diff_primitive_json_and_yield_unmatched_shape__results.snap  shape_diff__can_match_array_json__shape_projection_graph.snap  shape_diff__can_match_shape_for_nested_arrays__shape_projection_graph.snap  shape_diff__can_yield_unmatched_shape_for_field__shape_projection_graph.snap
workspaces/diff-engine/: .gitignore  .npmignore  Cargo.toml  README.md  Taskfile.yml  build.rs  package.json  tsconfig.json
workspaces/diff-engine-wasm/: .gitignore  Cargo.toml  package.json  tsconfig.json  webpack.plugin.js
workspaces/diff-engine-wasm/engine/: Cargo.toml
workspaces/diff-engine-wasm/engine/src/: lib.rs
workspaces/diff-engine-wasm/src/: async-tools.ts  lib.rs
workspaces/diff-engine-wasm/src/streams/: commands.ts  diff-results.ts  index.ts  learning-results.ts
workspaces/diff-engine-wasm/test/tests/: async-tools.ts  engine.ts  index.ts
workspaces/diff-engine-wasm/typings/stream-json/: index.d.ts
workspaces/diff-engine/cli/: Cargo.toml
workspaces/diff-engine/cli/src/: commit.rs  learn.rs  main.rs
workspaces/diff-engine/lib/: config.js  index.d.ts  index.js
workspaces/diff-engine/scripts/: build-binaries.sh  build.sh  install.js  test.sh  uninstall.js
workspaces/diff-engine/src/: lib.rs  main.rs
workspaces/diff-engine/src/commands/: endpoint.rs  mod.rs  rfc.rs  shape.rs
workspaces/diff-engine/src/events/: endpoint.rs  http_interaction.rs  macros.rs  mod.rs  rfc.rs  shape.rs  spec_chunk.rs
workspaces/diff-engine/src/interactions/: mod.rs  result.rs  traverser.rs
workspaces/diff-engine/src/learn_shape/: json_traverser.rs  mod.rs  result.rs  trail_values.rs  traverser.rs
workspaces/diff-engine/src/projections/: changelog.rs  conflicts.rs  contributions.rs  endpoint.rs  hash.rs  history.rs  mod.rs  shape.rs  spec_assembler.rs  spec_events.rs
workspaces/diff-engine/src/protos/: shapehash.proto
workspaces/diff-engine/src/queries/: changelog.rs  endpoint.rs  history.rs  mod.rs  shape.rs
workspaces/diff-engine/src/shapes/: mod.rs  result.rs  traverser.rs
workspaces/diff-engine/src/spec/: mod.rs
workspaces/diff-engine/src/state/: body.rs  endpoint.rs  mod.rs  shape.rs
workspaces/diff-engine/src/streams/: diff.rs  http_interaction.rs  mod.rs  shape_diff_affordances.rs  spec_chunks.rs  spec_events.rs
workspaces/diff-engine/support/: debug-capture-to-jsonl.js
workspaces/diff-engine/tests/: bug-scenarios.rs  changelog-projections.rs  changelog_projections.rs  domain-conflict-scenarios-generated.rs  e2e-scenarios.rs  events.rs  http_interactions.rs  interaction_diff.rs  shape-diff-use-cases.rs  shape_diff.rs  spec_assembler.rs  spec_events_steam.rs
workspaces/diff-engine/tests/fixtures/: ergast-example-spec.json  todos-spec.json
workspaces/diff-engine/tests/lib/: spawn.js
workspaces/diff-engine/tests/snapshots/: bug_scenarios__scenario_32__endpoints_graph.snap  bug_scenarios__scenario_32__results.snap  bug_scenarios__scenario_32__shape_graph.snap  bug_scenarios__scenario_33__results.snap  bug_scenarios__scenario_33__shape_graph.snap  bug_scenarios__scenario_34__results.snap  bug_scenarios__scenario_34__shape_graph.snap  changelog_projections__can_query_empty_projection_for_added_endpoints.snap  changelog_projections__can_query_empty_projection_for_changed_endpoints.snap  changelog_projections__changelog_with_added_events_can_query_added_endpoints_all_time.snap  changelog_projections__changelog_with_added_events_can_query_added_endpoints_no_time.snap  changelog_projections__changelog_with_added_events_can_query_added_endpoints_some_time.snap  changelog_projections__empty_changelog_can_query_added_endpoints.snap  changelog_projections__empty_events_gives_empty_projection.snap  (+128 more)
workspaces/diff-engine/tests/tap-snapshots/: lib-spawn.js-TAP.test.js
workspaces/diff-engine/ts/: config.ts  index.ts
workspaces/optic-engine/: .gitignore  Cargo.toml  README.md
workspaces/optic-engine-native/cli/: Cargo.toml
workspaces/optic-engine-wasm/: .gitignore  Cargo.toml  README.md  package.json  webpack.plugin.js
workspaces/optic-engine-wasm/scripts/: watch.js
workspaces/optic-engine-wasm/src/: lib.rs
workspaces/optic-engine/src/: lib.rs
workspaces/optic-engine/tests/: bug-scenarios.rs  domain-conflict-scenarios-generated.rs  e2e-scenarios.rs  events.rs  http_interactions.rs  interaction-diff-use-cases.rs  interaction_diff.rs  shape-diff-affordances-learner.rs  shape-diff-use-cases.rs  shape_diff.rs  spec_assembler.rs  spec_events_steam.rs  undocumented_bodies_learner.rs
(+7130 files in other folders)
