[package]
name = "optic_diff"
version = "0.1.0"
authors = ["Jaap Rood <jaap@jaaprood.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cqrs-core = "0.2.2"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.57"