[package]
name = "optic_diff"
version = "0.1.0"
authors = ["Jaap Rood <jaap@jaaprood.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avro-rs = "~0.11.0"
bytes = "0.5.6"
clap = "~2.33.3"
cqrs-core = "0.2.2"
futures = "0.3.5"
petgraph = "0.5.1"
petgraph-evcxr = "*"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.57"
insta = "0.16.1"
# all of tokio for now, until we figure out what we need exactly
tokio = { version = "~0.2.22", features = ["full"] } 
tokio-util = { version = "0.3.1", features = ["codec"] }