[package]
name = "optic_engine_wasm"
version = "0.1.0"
authors = ["Jaap Rood <jaap@jaaprood.nl>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[workspace] # Creating a new workspace prevents this from being built as part of the pre-built binaries

[dependencies]
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
console_error_panic_hook = "0.1.6"
log = "0.4.6"
nanoid = "0.4.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.57"
wasm-bindgen = "0.2.74"
wasm-logger = "0.2.0"
uuid = { version = "0.8.2", features = ["v4", "wasm-bindgen"] }

[dependencies.getrandom]
features = ["js"]

[dependencies.optic_diff_engine]
path = "../diff-engine" 
default-features = false