# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "optic_engine"
version = "0.1.0"
authors = ["Jaap Rood <jaap@jaaprood.nl>"]
edition = "2018"

[lib]
crate-type = ["lib"]
edition = "2018"

[features]
default = ["streams"]
streams = ["futures", "tokio", "tokio-util", "tokio-stream"]

[dependencies]
avro-rs = "~0.11.0"
base64 = "0.12.3"
bytes = "1.0.1"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
clap = "~2.33.3"
cqrs-core = "0.2.2"
futures = { version = "0.3.12", optional = true }
log = "0.4.6"
num_cpus = "1.13.0"
petgraph = "0.5.1"
protobuf = "2.23.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.24"
# all of tokio for now, until we figure out what we need exactly
tokio = { version = "~1.1.1", features = ["full"], optional = true }
tokio-util = { version = "0.6.3", features = ["codec"], optional = true }
tokio-stream = { version= "0.1.2", features = ["fs", "io-util"], optional = true }
uuid = { version = "0.8.2", features = ["v4", "wasm-bindgen"] }

[dev-dependencies]
insta = "0.16.1"
petgraph-evcxr = "*"

[build-dependencies]
protobuf-codegen-pure = "2.17.0"
