[package]
name = "optic_diff"
version = "0.1.0"
authors = ["Jaap van Hardeveld <jaap@jaaprood.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19" 
clap = "~2.33.3"
futures = "0.3.12"
nanoid = "0.4.0"
num_cpus = "1.13.0"
optic_engine = { path = "../" }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.57"
# all of tokio for now, until we figure out what we need exactly
tokio = { version = "~1.1.1", features = ["full"] } 
tokio-stream = "0.1.2"
tokio-util = { version = "0.6.3", features = ["codec"] }
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
path-absolutize = "3.0.7"